<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottom_sheet_threedote_note"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"

    android:paddingBottom="10dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    >

    <Button
        android:id="@+id/btn_bottom_sheet_threedot_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableLeft="@drawable/ic_delete_black_24dp"
        android:drawablePadding="30dp"
        android:gravity="left|center_vertical"
        android:text="@string/bottom_sheet_delete_button"
        android:textAllCaps="false"
        android:textSize="19sp" />
    <Button
        android:id="@+id/btn_bottom_sheet_threedot_make_a_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_content_copy_black_24dp"
        android:gravity="left|center_vertical"
        android:drawablePadding="30dp"
        android:text="@string/bottom_sheet_make_a_copy_button"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:background="@null"
        />
    <Button
        android:id="@+id/btn_bottom_sheet_threedot_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_share_black_24dp"
        android:gravity="left|center_vertical"
        android:drawablePadding="30dp"
        android:text="@string/bottom_sheet_share_button"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:background="@null"
        />
</LinearLayout>